[macOS] Title Bar persists in Fullscreen mode
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| relnote-firefox | --- | 70+ |
| firefox-esr60 | --- | unaffected |
| firefox-esr68 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | --- | unaffected |
| firefox69 | --- | unaffected |
| firefox70 | + | verified |
| firefox71 | + | verified |
People
(Reporter: cbadau, Assigned: mstange)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
48.47 KB,
image/png
|
Details | |
|
47 bytes,
text/x-phabricator-request
|
lizzard
:
approval-mozilla-release+
|
Details | Review |
Affected versions
- Firefox 70 RC
- Firefox Nightly 71.0a1 (2019-10-14)
Affected platforms
- macOS 10.14
- macOS 10.15
Steps to reproduce
- Launch Firefox.
- Enable "Title Bar" via "Customize...".
- Go to Fullscreen (from Hamburger Menu).
Expected result
- Title Bar disappears while in Fullscreen mode.
Actual result
- Title Bar is still visible in Fullscreen mode and overlaps the Tab Bar. Please see attachment "issue.png".
Regression range
- I will come back ASAP with regression range.
Additional notes
- The issue is NOT reproducible on Firefox 69.0.3.
| Reporter | ||
Updated•6 years ago
|
| Reporter | ||
Updated•6 years ago
|
Comment 1•6 years ago
|
||
Bugbug thinks this bug is a regression, but please revert this change in case of error.
| Assignee | ||
Comment 2•6 years ago
|
||
This is terrible. I'm taking a look.
| Assignee | ||
Comment 3•6 years ago
•
|
||
I'm going to look for the regression range now.
I think the bug is not as terrible as I thought it was: This does not happen for new windows that have had titlebars from the start. It only happens if you enable the titlebar on an existing window and then go to fullscreen mode in that window. Any new windows are fine.
| Assignee | ||
Comment 4•6 years ago
|
||
On 69, the titlebar also appears under these STR, but it doesn't cover the tabs. It only shows up behind the tabs, in the transparent parts of the fullscreen tab bar. So the "regression" part here is that this unexpected titlebar now covers the tabs.
| Assignee | ||
Comment 5•6 years ago
|
||
The first regression (titlebar visible behind tabs) is from bug 1533562. The second regression (titlebar in front of tabs) is from flipping the CoreAnimation pref, bug 1574538.
| Assignee | ||
Comment 6•6 years ago
|
||
Usually it covers a different area than the window's ChildView. But in some cases
it can overlap with the ChildView, and in those cases, it's better if the
ChildView is on top.
Comment 8•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
Comment 9•6 years ago
|
||
I'm hesitant to call this wontfix for 70 until we see what happens after we ship. If this proves more common of an issue than comment 3 suggests, we may want to consider this for a dot release ride-along still. Unless we want to take this in the RC2 respin just to be safe?
| Reporter | ||
Comment 10•6 years ago
|
||
It seems the issue is fixed on latest Nightly 71.0a1 (2019-10-16) - on macOS 10.15 and macOS 10.14: the Title Bar doesn't cover the tabs anymore while in Full Screen mode.
Also, I can confirm for Firefox 70 what is mentioned in comment 3: this does not happen for new windows that have had Title Bar from the start. The issue is reproducible only in window where you enabled Title Bar (from Customize).
| Assignee | ||
Comment 11•6 years ago
|
||
I think this is a good candidate to uplift to release. I don't have a strong opinion on whether it should go into an RC2 respin or as a ride-along into a dot release. I'll request approval so that Liz can make a call.
| Assignee | ||
Comment 12•6 years ago
|
||
Comment on attachment 9101373 [details]
Bug 1588747 - Always insert the TitlebarGradientView underneath its siblings. r=spohl
Beta/Release Uplift Approval Request
- User impact if declined: After enabling the title bar from customize mode, putting any of the windows that were open at the time into full screen mode will leave them with a mostly-hidden tab bar (covered by an opaque empty title bar).
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Extremely low-risk one-liner patch.
- String changes made/needed:
| Assignee | ||
Updated•6 years ago
|
Updated•6 years ago
|
Comment 13•6 years ago
|
||
I'll track for post-release evaluation and possibly including in 70.1.
Comment 14•6 years ago
|
||
Comment on attachment 9101373 [details]
Bug 1588747 - Always insert the TitlebarGradientView underneath its siblings. r=spohl
Simple fix for new regression in 70 in a popular feature, verified in nightly, let's uplift for a 70.1 release as a ridealong.
Comment 15•6 years ago
|
||
| bugherder uplift | ||
| Reporter | ||
Comment 16•6 years ago
|
||
Verified fixed on macOS 10.14 and macOS 10.15 using Firefox 70.0.1 (buildID: 20191030021342).
Comment 17•6 years ago
|
||
Adding to the 70.0.1 release notes as "Title bar no longer shows in full screen view"
Updated•4 years ago
|
Description
•