Bug 1588747 - Always insert the TitlebarGradientView underneath its siblings. r=spohl

Usually it covers a different area than the window's ChildView. But in some cases
it can overlap with the ChildView, and in those cases, it's better if the
ChildView is on top.

Differential Revision: https://phabricator.services.mozilla.com/D49332

--HG--
extra : moz-landing-system : lando